--- a/Pages/About.html
+++ b/Pages/About.html
@@ -12,6 +12,10 @@
     <title>About Us</title>
     </head>
     <body>
+      <div class="LoadingPage" style="position: fixed;z-index: 100000; height: 100vh; width: 100%; background-color: #3b3b3b; top:0; display: flex; justify-content: center;align-items: center;">
+        <img src="Images/Loadin.gif" alt="" srcset="" style="    height: 260px;
+        width: 330px;">
+      </div>
     <!--Start Login-->
     <div class="mainLogin">
         <div class="login">
