--- a/Pages/About.html
+++ b/Pages/About.html
@@ -13,7 +13,7 @@
     </head>
     <body>
       <div class="LoadingPage" style="position: fixed;z-index: 100000; height: 100vh; width: 100%; background-color: #3b3b3b; top:0; display: flex; justify-content: center;align-items: center;">
-        <img src="Images/Loadin.gif" alt="" srcset="" style="    height: 260px;
+        <img src="../Images/Loadin.gif" alt="" srcset="" style="    height: 260px;
         width: 330px;">
       </div>
     <!--Start Login-->
