--- a/Pages/About.html
+++ b/Pages/About.html
@@ -317,11 +317,66 @@
                 
                 </div>
             
-                <div class="col-lg-6 ImageContainer">
-                    <img src="../Images/supportTeam.png" alt="">
+                <div class="col-lg-6 ImageContainer"style="z-index: 50;">
+                    <img src="../Images/supportTeam.png"  alt="">
                 </div>
             </div>
         </div>
+    </section>
+
+
+    <section style="margin-top: 100px;">
+      <div class="container" >
+        <div class="row" style="justify-content: center;">
+          <div class="col-lg-7 description" style="display: none;    animation-name: OpacityAnimation;
+          animation-duration: 2s;
+      ">
+            <div class="row">
+              <div class="col-lg-5">
+                <div  class="card DescriptionImage">
+                  <img  src="../Images/President.png" alt="">
+                </div>
+              </div>
+              <div class="col-lg-7 centerFlex">
+                <p class="DescriptionText" style="color: #FFF;
+                z-index: 30;
+                text-align: center;
+                font-family: Raleway;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 800;
+                line-height:20px; 
+                letter-spacing: 0.5px;
+                text-transform: capitalize;">Our High Board</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <div DescriptionTextAttr="mohamed  Sengy,  student at faculty 
+            <br> of computer and information ain- 
+            <br> shams university,previous vice 
+            <br> president last season." class="TopCard card AntonCards centerFlex" style="width: 70%;">
+              <img width="100%" src="../Images/President.png" alt="">
+            </div>
+            <div DescriptionTextAttr="mohamed Fahmy, student at faculty 
+            <br> of computer and information ain- 
+            <br>shams university, previous  head of 
+            <br> cyper secyrity commetie last
+            <br> season." class="MidCard card AntonCards centerFlex" style="width: 70%; top:-34%">
+              <img width="100%" src="../Images/Vice1.jpeg" alt="">
+            </div>
+            <div 
+            DescriptionTextAttr="mohamed  ashraf  student at faculty 
+            <br> of computer and information ain- 
+            <br> shams university previous vice 
+            <br> head of HR commetie &previous 
+            <br> head of NETWORK commetie" 
+            class="BottomCard card AntonCards centerFlex" style="width: 70%; top:-68% ;">
+              <img width="100%" src="../Images/Vice2.png"  alt="">
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script src="../Assest/BootstrapFiles/js/all.min.js"></script>
