--- a/Pages/About.html
+++ b/Pages/About.html
@@ -327,7 +327,7 @@
 
     <section style="margin-top: 100px;">
       <div class="container" >
-        <div class="row" style="justify-content: center;">
+        <div class="row" style="justify-content: center;align-items: center;">
           <div class="col-lg-7 description" style="display: none;    animation-name: OpacityAnimation;
           animation-duration: 2s;
       ">
@@ -351,19 +351,20 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-5 MainSectionCards" style="position: relative;height: 465px;display: flex;
+          align-items: center;">
             <div DescriptionTextAttr="mohamed  Sengy,  student at faculty 
             <br> of computer and information ain- 
             <br> shams university,previous vice 
-            <br> president last season." class="TopCard card AntonCards centerFlex" style="width: 70%;">
-              <img width="100%" src="../Images/President.png" alt="">
-            </div>
+            <br> president last season." class="TopCard card AntonCards centerFlex" style="width: 70%;background-color: transparent;border:none;">
+            <img width="80%" src="../Images/President.png" alt="">
+          </div>
             <div DescriptionTextAttr="mohamed Fahmy, student at faculty 
             <br> of computer and information ain- 
             <br>shams university, previous  head of 
             <br> cyper secyrity commetie last
-            <br> season." class="MidCard card AntonCards centerFlex" style="width: 70%; top:-34%">
-              <img width="100%" src="../Images/Vice1.jpeg" alt="">
+            <br> season." class="MidCard card AntonCards centerFlex" style="width: 70%;background-color: transparent;border:none;">
+              <img width="80%" src="../Images/Vice1.jpeg" alt="">
             </div>
             <div 
             DescriptionTextAttr="mohamed  ashraf  student at faculty 
@@ -371,8 +372,8 @@
             <br> shams university previous vice 
             <br> head of HR commetie &previous 
             <br> head of NETWORK commetie" 
-            class="BottomCard card AntonCards centerFlex" style="width: 70%; top:-68% ;">
-              <img width="100%" src="../Images/Vice2.png"  alt="">
+            class="BottomCard card AntonCards centerFlex" style="width: 70%;background-color: transparent;border:none;">
+              <img width="80%" src="../Images/Vice2.png"  alt="">
             </div>
           </div>
         </div>
