--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
         </ul>
   
         <ul class="list-unstyled SocialIcons">
-            <li class="list-inline-item"><i class="fa-brands fa-facebook"></i></li>
-            <li class="list-inline-item"><i  class="fa-brands fa-instagram"></i></li>
-            <li class="list-inline-item"><i  class="fa-brands fa-twitter"></i></li>
+          <li class="list-inline-item"><a href="https://www.facebook.com/SUPPORT.FCIS"><i class="fa-brands fa-facebook"></i></a></li>
+          <li class="list-inline-item"><a href="https://www.instagram.com/support.asu"> <i  class="fa-brands fa-instagram"></i></a></li>
+          <li class="list-inline-item"><a href="https://www.youtube.com/@supportfcis2143"><i  class="fa-brands fa-youtube"></i></a> </li>
+          <li class="list-inline-item"><a href="https://twitter.com/SupportASU"><i  class="fa-brands fa-twitter"></i></a> </li>
+      
         </ul>   
         
     </div>
