--- a/Pages/About.html
+++ b/Pages/About.html
@@ -345,20 +345,20 @@
             </div>
           </div>
           <div class="col-lg-5 MainSectionCards">
-            <div DescriptionTextAttr="mohamed  Sengy,  student at faculty 
+            <div Role-attribute="president" DescriptionTextAttr="mohamed  Sengy,  student at faculty 
             of computer and information ain- 
             shams university,previous vice 
             president last season." class="TopCard card AntonCards centerFlex">
             <img width="80%" src="../Images/President.png" alt="">
           </div>
-            <div DescriptionTextAttr="mohamed Fahmy, student at faculty 
+            <div Role-attribute="vice 1" DescriptionTextAttr="mohamed Fahmy, student at faculty 
             of computer and information ain- 
             shams university, previous  head of 
             cyper secyrity commetie last
             season." class="MidCard card AntonCards centerFlex">
               <img width="80%" src="../Images/Vice1.jpeg" alt="">
             </div>
-            <div 
+            <div Role-attribute="vice 2"
             DescriptionTextAttr="mohamed  ashraf  student at faculty 
             of computer and information ain- 
             shams university previous vice 
