--- a/Pages/About.html
+++ b/Pages/About.html
@@ -149,8 +149,8 @@
     
       
         <nav class="navbar nav container">
-          <div class="leftNav centerFlex">
-            <div class="ImageLogo">
+          <div id="SupportLogo" class="leftNav centerFlex">
+            <div  class="ImageLogo">
               <img src="../Images/supportAnton.png" alt="Logo Support">
             </div>
             <div class="TextAnimation">
