--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     
       <nav class="navbar nav container">
-        <div class="leftNav centerFlex">
+        <div  id="SupportLogo"  class="leftNav centerFlex">
           <div class="ImageLogo">
             <img src="Images/supportAnton.png" alt="Logo Support">
           </div>
